# raylib_games

./: .gitignore  README.md
flappy_bird/: CMakeLists.txt  build.ps1  build_script.sh  build_windows.sh
flappy_bird/src/: Main.c
